| Summary: | ASTERISK-25157: bridging: Performing a blonde transfer does not result in connected line updates | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2015-06-11 16:26:37 | Date Closed: | 2015-06-13 08:38:31 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Core/Bridging |
| Versions: | 13.3.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | A blonde transfer is one in which an attended transfer is performed but before the new called party answers the transfer is completed. In this scenario the code will not currently cause connected line updates to occur. As a result each side shows that it is talking to the party who performed the transfer instead of each other. | ||
| Comments: | |||